# JobScrapper_2

./: exporter.py  jobs.csv  main.py  pyproject.toml  scrapper.py
templates/: potato.html  report.html
