[tool.poetry]
name = "repl_nix_JobScrapper2"
version = "0.1.0"
description = ""
authors = ["DawoonKim <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
requests = "^2.27.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
